--- a/Views/Livro/Listagem.cshtml
+++ b/Views/Livro/Listagem.cshtml
@@ -21,7 +21,8 @@
 
 <div class="row">
     <div class="col-md-12">
-        <table class="table table-striped"> 
+        @if(Model.Count >0) {
+            <table class="table table-striped"> 
             <thead>
                 <tr><th>Id</th>
                 <th>Titulo</th>
@@ -31,6 +32,7 @@
                 </tr>
             </thead>
             <tbody>
+
                 @foreach(Livro l in Model)
                 {
                 <tr>
@@ -43,5 +45,8 @@
                 }
             </tbody>
         </table>
+        } else {
+                    <p>Nenhum registro encontrado.</p>
+                }
     </div>
 </div>
